--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@vitejs/plugin-react": "^4.2.1",
     "async": "^3.2.6",
     "concurrently": "^9.1.2",
+    "esbuild": "^0.25.3",
     "eslint": "^8.45.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-react": "^7.33.2",
@@ -55,7 +56,7 @@
     "@radix-ui/react-radio-group": "^1.3.4",
     "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-slot": "^1.0.2",
-    "@tanstack/react-query": "^5.13.4",
+    "@tanstack/react-query": "^5.74.4",
     "class-variance-authority": "^0.7.0",
     "date-fns": "^4.1.0",
     "react": "^18.2.0",
