--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.2.0",
@@ -45,7 +46,7 @@
   "peerDependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.0.0"
+    "react-router-dom": "^7.5.2"
   },
   "devDependencies": {
     "@repo/tsconfig": "workspace:*",
@@ -59,9 +60,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.3",
-    "tsup": "^7.2.0",
+    "tsup": "^8.4.0",
     "typescript": "^5.0.2",
     "vite": "^4.5.13",
-    "vite-plugin-dts": "^3.9.1"
+    "vite-plugin-dts": "^4.5.3"
   }
 }
